--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         working-directory: ./ArboreBackend
     
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: 🔧 Setup Go
@@ -55,13 +55,13 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: ArboreBackend/go.sum
 
-      - name: 📦 Download dependencies
+      - name: Download dependencies
         run: go mod download
 
-      - name: 🧪 Run tests
+      - name: Run tests
         run: go test -v -race -coverprofile=coverage.out ./...
 
-      - name: 📊 Upload coverage
+      - name: Upload coverage
         uses: codecov/codecov-action@v3
         with:
           file: ./ArboreBackend/coverage.out
@@ -86,28 +86,28 @@ jobs:
         working-directory: ./AiGenerator
     
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🐍 Setup Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install pytest black flake8
 
-      - name: 🎨 Check code formatting
+      - name: Check code formatting
         run: black --check . || echo "Code formatting issues found"
 
-      - name: 🔍 Lint code
+      - name: Lint code
         run: flake8 . --max-line-length=88 --extend-ignore=E203,W503 || echo "Linting issues found"
 
-      - name: 🧪 Run tests
+      - name: Run tests
         run: |
           if [ -d tests ]; then
             pytest -v
@@ -125,15 +125,15 @@ jobs:
         working-directory: ./ArboreUi
     
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🍎 Setup Xcode
+      - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: 'latest-stable'
 
-      - name: 📦 Cache CocoaPods
+      - name: Cache CocoaPods
         uses: actions/cache@v3
         with:
           path: ArboreUi/Pods
@@ -141,7 +141,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pods-
 
-      - name: 📥 Install dependencies
+      - name: Install dependencies
         run: |
           if [ -f Podfile ]; then
             gem install cocoapods
@@ -170,10 +170,10 @@ jobs:
         working-directory: ./ArboreARkit
     
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🍎 Setup Xcode
+      - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: 'latest-stable'
@@ -196,9 +196,9 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: 📊 Build Summary
+      - name: Build Summary
         run: |
-          echo "🌱 Arbore CI/CD Summary:"
+          echo "Arbore CI/CD Summary:"
           echo "Backend: ${{ needs.backend.result || 'skipped' }}"
           echo "AI Generator: ${{ needs.ai_generator.result || 'skipped' }}"
           echo "iOS UI: ${{ needs.ios_ui.result || 'skipped' }}"
@@ -209,8 +209,8 @@ jobs:
              [[ "${{ needs.ai_generator.result }}" == "failure" ]] || \
              [[ "${{ needs.ios_ui.result }}" == "failure" ]] || \
              [[ "${{ needs.ios_ar.result }}" == "failure" ]]; then
-            echo "❌ Un ou plusieurs builds ont échoué"
+            echo "Un ou plusieurs builds ont échoué"
             exit 1
           else
-            echo "✅ Tous les builds ont réussi ou ont été ignorés"
+            echo "Tous les builds ont réussi ou ont été ignorés"
           fi
