--- a/ArboreUi/Podfile
+++ b/ArboreUi/Podfile
@@ -3,9 +3,9 @@ use_frameworks!
 
 target 'ArboreUi' do
   pod 'Firebase/Analytics'
-  pod 'Firebase/Auth', '~> 6.34.0'
+  pod 'Firebase/Auth'
   pod 'GoogleSignIn', '~> 7.0'
-  pod 'GoogleSignInSwift'  # Add this for Google Sign-In Swift support
+  pod 'GoogleSignInSwift'
   pod 'GTMSessionFetcher/Core', '~> 1.1'
   pod 'FBSDKLoginKit'
   pod 'Firebase/Firestore'
@@ -18,18 +18,34 @@ target 'ArboreUi' do
   end
 end
 
-# Unified post_install block to handle deployment target and BoringSSL-GRPC settings
+# Enhanced post_install block to handle deployment target and simulator architecture
 post_install do |installer|
   installer.generated_projects.each do |project|
     project.targets.each do |target|
       target.build_configurations.each do |config|
         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+        
+        # Exclude arm64 architecture for simulator builds
+        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
       end
     end
   end
 
-  # Remove compiler flag for BoringSSL-GRPC
+  # Configure each pod target
   installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      
+      # Exclude arm64 for simulator
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      
+      # Additional Firebase-specific configurations
+      if target.name.start_with?('Firebase') || target.name.start_with?('Google')
+        config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+      end
+    end
+    
+    # Remove compiler flag for BoringSSL-GRPC
     if target.name == 'BoringSSL-GRPC'
       target.source_build_phase.files.each do |file|
         if file.settings && file.settings['COMPILER_FLAGS']
